client/src/theme/styles/components/global/notification/_notification.scss
.notification {
  width: 100%;
  color: $neutralTextExtraDark;

  &--notice {
    background-color: $spNoticeLight;
  }

  &--warning {
    background-color: $spWarningLight;
  }

  &--error {
    background-color: $spErrorLight;
  }

  &--context-drawer {
    background-color: $neutral90;
  }

  &__container {
    @include containerPrototype;
    position: relative;
    // Adjusted container size
    padding-top: 23px;
    padding-bottom: 25px;

    @include respond($break120) {
      max-width: $containerWidthFull - 50px;
      padding: 23px 26px 25px;
    }

    .notification--context-drawer & {
      padding: 18px;
    }
  }

  &__heading {
    @include headingTertiary;
    padding-right: 67px;
    margin: 0;
    font-size: 18px;
    font-weight: $semibold;

    @include respond($break70) {
      font-size: 20px;
    }

    .notification--context-drawer & {
      font-size: 20px;
      color: $neutral30;
    }
  }

  &__body {
    @include templateCopy;
    padding-right: 67px;
    margin-top: 10px;
    font-size: 16px;

    @include respond($break70) {
      font-size: 20px;
    }

    .notification--context-drawer & {
      @include headingTertiary;
      padding-right: 0;
      margin-top: 8px;
      font-size: 16px;
      font-weight: normal;
      color: $neutral30;
    }
  }

  &__button {
    @include buttonUnstyled;

    .notification--context-header & {
      position: absolute;
      top: 50%;
      right: $containerPaddingResp;
      transform: translateY(-50%);

      @include respond($break120) {
        right: 26px;
      }

      &:focus-visible {
        outline-color: $neutralOffBlack;
      }

      &:hover {
        color: inherit;
      }
    }

    .notification--context-drawer & {
      position: relative;
      top: auto;
      right: auto;
      margin: 8px 0 0;
      font-size: inherit;
      color: $neutral50;

      &:hover {
        color: $neutral20;
      }

      .screen-reader-text {
        @include utilityPrimary;
        position: relative;
        overflow: visible;
        font-size: 12px;
      }
    }
  }

  &__button-icon {
    .notification--context-drawer & {
      display: none;
    }
  }
}

